--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8"><title>Quiz</title>
-		<link rel="stylesheets" href="/stylesheets/style.css"/>
-		<link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
-	</head>
-	<body>
-		<h2>Quiz: el juego de las preguntas</h2>
-
-		<p>Respuesta: <%= respuesta %> </p>
-		<a href="/quizes/question">Intentelo otra vez</a>
-	</body>
-</html>
+<p><%= respuesta %> </p>
