--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8"><title> Preguntas </title>
+	<meta charset="UTF-8"><title> Quiz </title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css"/>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
+	<link rel="stylesheet" type="text/css" media="only screen and (min-width: 530px) and (min-device-width: 418px)" href="/stylesheets/wide.css"/>
+	<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px)" href="/stylesheets/smartphone.css">
 </head>
 <body>
 	<div id="page-wrap">
