--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -5,7 +5,7 @@ body {
 nav {
 	float: left;
 	width: 15%;
-	height: 200px;
+	height: 300px;
 }
 
 nav span {
@@ -15,7 +15,7 @@ nav span {
 section {
 	float: right;
 	width: 80%;
-	height: 200px;
+	height: 300px;
 }
 
 footer {
@@ -25,4 +25,7 @@ footer {
 
 #page-wrap:after {
 	content: "Wide Layout";
+}
+.image {
+	
 }
